git master
----------
* Fixed bug (found by Andy Mueller): added GMP library invocations to swig Makefile
* Fixed bug (found by Yan): replaced GNU extension __PRETTY_FUNCTION__ by __FUNCTION (Visual Studio) or __func__ (other compilers)
* Fixed bug (found by cax): when building MatLab MEX files, GMP libraries were not linked
* [Arman Aksoy] Added Makefile.MACOSX64
* Fixed bug in findMaximum (it only considered a single connected component of the factor graph)
* [Benjamin Piwowarski] Renamed "foreach" macro into "bforeach" to avoid conflicts with newer Boost library versions
* Optimized ClusterGraph( const FactorGraph&, bool) constructor
* Fixed "typename" bug in src/alldai.cpp which resulted in FTBFS for older g++ compilers
* Fixed memory leak in alldai.cpp and removed the function builtinInfAlgs()
* Fixed memory leak in CBP::run()
* Fixed typo in Priya's name


libDAI-0.3.0 (2011-07-12)
-------------------------

New license:
* Changed license from GPL v2+ to FreeBSD (BSD 2-clause)

Miscellaneous improvements:
* Improved Exception class 
  (it now stores more information and doesn't print to stderr by default)
* Added builtinInfAlgs() and builtinInfAlgNames()

Bug fixes:
* [Laurens van der Maaten] src/matlab/dai.cpp now correctly handles missing logZ() 
  and maxDiff() implementations
* Now uses GMP big integer type to represent linear states and the number of
  states of VarSets (in some cases). This fixes a bug Jerome Maye and Priya 
  found in the State class. Unfortunately, the supplied Makefile.WINDOWS now 
  no longer works out-of-the-box.
* Fixed numerical issues in MF, FBP and TRWBP (discovered in sparse branch)
* Fixed bug in findMaximum(): inconsistent max-beliefs are now detected,
  instead of returning a MAP state with zero joint probability
  (reported by Hynek Urban)
* Fixed a Boost-related bug in src/util.cpp (reported by Avneesh Saluja)
  (the random seed needs to be an unsigned int on some platforms)