@@ -1,5 +1,5 @@
 {% set name = "libdai" %}
-{% set version = "0.4.1" %}
+{% set version = "0.4.5" %}
 #{% set sha256 = "b2ada6f86faf5c9032e8b1a7b8cc0dff68a229e90ad80b366f5564fec03caa17" %}
 
 package:
