@@ -1,3 +1,8 @@
+
+git master (DerThorsten)
+-----------------
+* CMake and Conda build system
+
 git master
 ----------
 * Fixed bug (found by Andy Mueller): added GMP library invocations to swig Makefile
